@@ -1,3 +1,9 @@
+2014-01-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/58809
+	* semantics.c (finish_omp_reduction_clause): Reject
+	BIT_AND_EXPR, BIT_IOR_EXPR and BIT_XOR_EXPR on COMPLEX_TYPEs.
+
 2014-01-22  Ville Voutilainen  <ville.voutilainen@gmail.com>
 
 	PR c++/59482
