@@ -1,3 +1,8 @@
+2014-01-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/58809
+	* c-c++-common/gomp/pr58809.c: New test.
+
 2014-01-23  Dominique Dhumieres  <dominiq@lps.ens.fr>
 
 	PR sanitizer/59897
